--- a/templates/search.html
+++ b/templates/search.html
@@ -15,12 +15,12 @@
     <meta charset="utf-8"> 
 
   <!--<link rel=stylesheet type=text/css href="{{ url_for('static', filename='styles.css') }}">-->
-  <link rel=stylesheet type=text/css href="{{ url_for('static', filename='yaniv.css') }}">
+  <link rel=stylesheet type=text/css href="{{ url_for('static', filename='search.css') }}">
+
 
   <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
 	</head>
-	<body>
-
+<body class="bg-search">
 <nav class="navbar navbar-default" style="margin-bottom: 0px;">
     <div class="container-fluid">
         <div class="navbar-header">
@@ -45,22 +45,39 @@
     </div><!--/.container-fluid -->
 </nav>
   
-	<form action="{{ url_for('search') }}">
-	<div class="form-group">
-      <br>
-      <br>
-      <br>
-      <hr>
-      <div class="col-md-offset-2 col-md-5">
-      <input type="text" class="form-control input-lg" name="instrument" id="search" placeholder="Search">
+<br>
+<br>
+<div class="container-fluid">
 
-  <div class="col-md-offset-1 col-md-3">
-    <input class="btn btn-lg btn-primary btn-block" type="submit" value="Search">
-  </div>
-      <br>
+	<form action="{{ url_for('search') }}">
+
+    <div class="container">
+      <div class="row">
+        <div class="col-md-offset-3 col-md-5">
+          <div class="input-group" id="adv-search">
+            <input type="text" class="form-control input-lg" name="instrument" id="search" placeholder="Search"/>
+              <div class="input-group-btn">
+                <div class="btn-group" role="group">
+                  <div class="dropdown dropdown-lg">
+                  </div>
+                </div>
+                <button type="submit" class="btn btn-primary btn-lg" value="submit">
+                <span class="glyphicon glyphicon-search" aria-hidden="true">
+                </span>
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
     </div>
-  </div>
   </form>
+
+
+
+
   {%if error1%}
   <h1>You are not logged in !</h1>
   {%endif%}
@@ -68,36 +85,45 @@
   <h1>No results, try again !</h1>
   {%endif%}
   <table class="table">
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Instruments</th>
-      <th>Gender</th>
-      <th>Nationality</th>
-      <th>City</th>
-      <th>Date of Birth</th>
-      <th>Favorite TV Show</th>
-      <th></th>
-    </tr>
-  </thead>
-  <tbody>
-    {% for person in users %}
-    <tr>
-      <td>{{ person.name }}</td>
-      <td>{%for instrument in person.instrument%}
-      {{ instrument.name }}
-      {%endfor%}</td>
-      <td>{{ person.gender }}</td>
-      <td>{{ person.nationality }}</td>
-      <td>{{ person.city }}</td>
-      <td>{{ person.dob.day }}/{{ person.dob.month }}/{{ person.dob.year }} </td>
-      <td>{%for interest in person.interests%}
-      {{ interest.name }}
-      {%endfor%}</td>
-      <td><a href="{{ url_for('compare',person_id=person.id) }}" class="btn btn-primary" role="button">Compare</a></td>
-    </tr>
-    {% endfor %}
+    <thead class="search-head">
+      <tr>
+        <th>Name</th>
+        <th>Instruments</th>
+        <th>Gender</th>
+        <th>Nationality</th>
+        <th>City</th>
+        <th>Date of Birth</th>
+        <th>Favorite TV Show</th>
+        <th></th>
+      </tr>
+    </thead>
+    <tbody class="search">
+      {% for person in users %}
+      <tr>
+        <td>{{ person.name }}</td>
+        <td>{%for instrument in person.instrument%}
+            {{ instrument.name }}
+            {%endfor%}</td>
+        <td>{{ person.gender }}</td>
+        <td>{{ person.nationality }}</td>
+        <td>{{ person.city }}</td>
+        <td>{{ person.dob.day }}/{{ person.dob.month }}/{{ person.dob.year }} </td>
+        <td>{%for interest in person.interests%}
+            {{ interest.name }}
+            {%endfor%}</td>
+        <td><a href="{{ url_for('compare',person_id=person.id) }}" class="btn btn-primary" role="button">Compare</a></td>
+      </tr>
+      {% endfor %}
     </tbody>
-    </table>
+  </table>
+
+
+
+</div>
+
 	</body>
 </html> 
+
+
+
+
