Totally final website git add .!

--- a/templates/compare.html
+++ b/templates/compare.html
@@ -18,6 +18,8 @@
 
 
 	<link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
+		<link rel="shortcut icon" href="/static/logo.png">
+
 </head>
 <body class="bg-compare">
 <nav class="navbar navbar-default" style="margin-bottom: 0px;">
@@ -44,14 +46,14 @@
     </div><!--/.container-fluid -->
 </nav>
 	<table class="table">
-	<thead style="color: white;">
+	<thead style="color: black;">
 		<tr>
 			<th>Details</th>
 			<th>{{ user.name }}</th>
 			<th>{{ person.name }}</th>
 		</tr>
 	</thead>
-	<tbody style="color: white;">
+	<tbody style="color: black;">
 		<tr>
 			<td><b>Nationality</b></td>
 			<td>{{ user.nationality }}</td>
