--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -19,6 +19,7 @@
   <link rel=stylesheet type=text/css href="{{ url_for('static', filename='yaniv.css') }}">
 
   <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
+  	<link rel="shortcut icon" href="/static/logo.png">
 </head>
 <body>
 
@@ -102,7 +103,7 @@
           <label class="btn"><input type="checkbox" name="instrument" value="violin">Violin</label>
           <br>
 
-          <label class="btn"><input type="checkbox" name="instrument" value="chelo">Cello</label>
+          <label class="btn"><input type="checkbox" name="instrument" value="cello">Cello</label>
           <br>
 
           <label class="btn"><input type="checkbox" name="instrument" value="voice">Voice</label>
