--- a/templates/search.html
+++ b/templates/search.html
@@ -17,6 +17,8 @@
   <link rel=stylesheet type=text/css href="{{ url_for('static', filename='search.css') }}">
 
   <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
+  	<link rel="shortcut icon" href="/static/logo.png">
+
 	</head>
 <body class="bg-search">
 <nav class="navbar navbar-default" style="margin-bottom: 0px;">
@@ -53,7 +55,7 @@
       <div class="row">
         <div class="col-md-offset-3 col-md-5">
           <div class="input-group" id="adv-search">
-            <input type="text" class="form-control input-lg" name="instrument" id="search" placeholder="Search"/>
+            <input type="text" class="form-control input-lg" name="instrument" id="search" placeholder="Search For Instrument"/>
               <div class="input-group-btn">
                 <div class="btn-group" role="group">
                   <div class="dropdown dropdown-lg">
@@ -73,15 +75,14 @@
     </div>
   </form>
 
-
-
-
-  {%if error1%}
+  {%if error2%}
   <h1>You are not logged in !</h1>
   {%endif%}
-  {%if error2%}
+
+  {%if error1%}
   <h1>No results, try again !</h1>
   {%endif%}
+  
   <table class="table">
     <thead class="search-head">
       <tr>
