Totally final website git add git add .git add .

--- a/templates/compare.html
+++ b/templates/compare.html
@@ -70,6 +70,11 @@
 			<td>{{ person.phone }}</td>
 		</tr>
 		<tr>
+			<td><b>Email</b></td>
+			<td>{{ user.email }}</td>
+			<td>{{ person.email }}</td>
+		</tr>
+		<tr>
 			<td><b>Instruments</b></td>
 			<td>{%for instrument in user.instrument%}
 	 		{{ instrument.name }}
