--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -108,5 +108,41 @@
 	<iframe width="560" height="315" src="https://www.youtube.com/embed/L7IP4UlXvG8" frameborder="0" allowfullscreen></iframe>
 </div>
 
+
+
+<div class="container-fluid who">
+	<div class="row">
+		<h3 class="who-r">Who Are We?</h3>
+			<div>
+				<div class="col-md-2 who-r-we">
+					<h4>nada</h4>
+					<img src="static/grumpy-cat.jpg">
+				</div>
+				<div class="col-md-2 who-r-we">
+					<h4>nada</h4>
+					<img src="static/grumpy-cat.jpg">
+				</div>
+				<div class="col-md-2 who-r-we">
+				<h4>nada</h4>
+					<img src="static/grumpy-cat.jpg">
+				</div>
+				
+				<div class="col-md-2 who-r-we">
+					<h4>nada</h4>
+					<img src="static/grumpy-cat.jpg">
+				</div>
+				<div class="col-md-2 who-r-we">
+					<h4>nada</h4>
+					<img src="static/grumpy-cat.jpg">
+				</div>
+
+
+			</div>
+
+	</div>
+</div>
+
+
+
 </body>
 </html>
