--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -115,25 +115,25 @@
 		<h3 class="who-r">Who Are We?</h3>
 			<div>
 				<div class="col-md-2 who-r-we">
-					<h4>nada</h4>
-					<img src="static/grumpy-cat.jpg">
+					<h4>Yair</h4>
+					<img src="static/rsz_yair.jpg">
 				</div>
 				<div class="col-md-2 who-r-we">
-					<h4>nada</h4>
-					<img src="static/grumpy-cat.jpg">
+					<h4>Yaniv</h4>
+					<img src="static/rsz_yaniv.jpg">
 				</div>
 				<div class="col-md-2 who-r-we">
-				<h4>nada</h4>
-					<img src="static/grumpy-cat.jpg">
+				<h4>Nada</h4>
+					<img src="static/rsz_nada.jpg">
 				</div>
 				
 				<div class="col-md-2 who-r-we">
-					<h4>nada</h4>
-					<img src="static/grumpy-cat.jpg">
+					<h4>Jeries</h4>
+					<img src="static/rsz_jeries.jpg">
 				</div>
 				<div class="col-md-2 who-r-we">
-					<h4>nada</h4>
-					<img src="static/grumpy-cat.jpg">
+					<h4>Tal</h4>
+					<img src="static/tal_resize.jpg">
 				</div>
 
 
